# zai-lang

./: .gitignore  DOCUMENTATION.md  DOCUMENTATION.zh-CN.md  PHILOSOPHY.md  PHILOSOPHY.zh-CN.md  README.md  README.zh-CN.md  SPECIFICATION.md  SPECIFICATION.zh-CN.md  USAGE.md  USAGE.zh-CN.md  pyproject.toml
.agent-shell/transcripts/: 2026-02-03-22-25-59.md
.agent/rules/: permission.md
core/: interpreter.py  parser.py
docs/: cognitive_model.mmd  philosophy_diagram.py  philosophy_diagram_en.py
examples/: agent_system_prompt.zai  coffee_shop.al  conversion_access.zai  final_verification.al  final_verification.zai  full_demo.al  full_demo.zai  persona_usage.zai  test_parser.al  test_parser.zai
examples/aiops/: README.md  orchestrator.zai
examples/aiops/tools/: check_metrics.py  knowledge_base.py  query_logs.py  simulate_fix.py
examples/lifestyle/: config.zaih  scheduler.zai
examples/modular/: brain.zaih  main.zai
examples/multi_agent/: README.md  chef.zai  restaurant.zai  restaurant_v2.zai  test_restaurant.py  waiter.zai
tests/: test_config.py  test_constraints.py  test_core_features.py  test_default_bridges.py  test_interpreter_comprehensive.py  test_ipc.py  test_parser_comprehensive.py  test_persona_usage.py  test_scheduler_example.py  test_statements.py
zai/: cli.py  config.py  zai.py
zai/builtin/: tools.py
zai/core/: environment.py  interpreter.py  parser.py
zai/runtime/: bridge.py  default_bridge.py
